samples/_failures_safe/1761206351_576185_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ffd70df.c: In function ‘main’:
./samples/SAFE/__tmp_9ffd70df.c:169:9: error: expected declaration or statement at end of input
  169 |         if (k >= token_count) break;
      |         ^~
./samples/SAFE/__tmp_9ffd70df.c:169:9: error: expected declaration or statement at end of input
